--- a/index.html
+++ b/index.html
@@ -8,5 +8,12 @@
 </head>
 <body>
     <h1> Local Storage </h1>
+
+    <main>
+        <section id="uno">
+
+        </section>
+    </main>
 </body>
+<script src="app.js"></script>
 </html>
